Fixes border on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -177,6 +177,7 @@ input {
     border-bottom: 1px solid #e5e5e5;
     margin-left: -35px;
     width: 110%;
+    border: none;
   }
 
   .park-names {
